-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.4.2, Qt Creator 3.5.0-beta1
-
Target is a iMX 6 quad running Windows Embedded Compact 7
-
2ee019b46f5d71aa573da4c8e5f83d8254ce7f84
When I try to attach QML Profiler to a embedded target which is kind of slow, I cannot profile the application. Qt Creator simply crashes.
This happens due to multiply connections. There is a tryconnect timer which has a interval of 200ms set, target is so slow that he does not make it in time. So protocol object gets deleted, while trying to send something.
| For Gerrit Dashboard: QTCREATORBUG-14685 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 120762,2 | QmlProfiler: Don't try to reconnect while already connecting | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |