QmlProfiler: Don't try to reconnect while already connecting

Hanging connection attempts will be aborted in response to the
"retry" message box now.

Change-Id: I63775eed9d7677a62293ba5c96a43e839ba285b4
Task-number: QTCREATORBUG-14685
Reviewed-by: Andreas Holzammer <andreas.holzammer@kdab.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>