src/plugins/qmlprofiler/qmlprofilerclientmanager.cpp
@@ -215,7 +215,7 @@ void QmlProfilerClientManager::disconnectClientSignals()
 
 void QmlProfilerClientManager::connectToClient()
 {
-    if (!d->connection || d->connection->isOpen())
+    if (!d->connection || d->connection->isOpen() || d->connection->isConnecting())
         return;
 
     d->connection->connectToHost(d->tcpHost, d->tcpPort);
@@ -290,6 +290,10 @@ void QmlProfilerClientManager::logState(const QString &msg)
 
 void QmlProfilerClientManager::retryMessageBoxFinished(int result)
 {
+    QTC_ASSERT(!d->connection->isOpen(), return);
+    if (d->connection->isConnecting())
+        d->connection->disconnect();
+
     switch (result) {
     case QMessageBox::Retry: {
         d->connectionAttempts = 0;
